"Flat Caps" on Cutter tool not working if cut is made in the middle of the stroke #93074

Closed
opened 2021-11-14 16:38:53 +01:00 by Matthew Gafford · 5 comments

Operating system: Win10 Home 64
Graphics card: rtx3070

Blender Version
Broken: 2.935
Worked: N/A

image.png

Exact steps to reproduce the error:

Open file FlapCapsNotWorkingInMiddleOfStroke.blend

or

  • Make a grease pencil object
  • Draw a thick stroke intersecting across two thin strokes
  • Use the cutter tool with Flat Caps enabled, and cut out the middle of the stroke
Operating system: Win10 Home 64 Graphics card: rtx3070 Blender Version Broken: 2.935 Worked: N/A ![image.png](https://archive.blender.org/developer/F11803711/image.png) Exact steps to reproduce the error: Open file [FlapCapsNotWorkingInMiddleOfStroke.blend](https://archive.blender.org/developer/F11803720/FlapCapsNotWorkingInMiddleOfStroke.blend) or - Make a grease pencil object - Draw a thick stroke intersecting across two thin strokes - Use the cutter tool with Flat Caps enabled, and cut out the middle of the stroke

Added subscriber: @AFoxInSpace

Added subscriber: @AFoxInSpace
Antonio Vazquez self-assigned this 2021-11-15 11:16:52 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 6cad8690c3

This issue was referenced by 6cad8690c306bc4d55af15ae2b53cf686346d263

This issue was referenced by c3472cb11c

This issue was referenced by c3472cb11cded38b277f71ca9d7fc06c417da022

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93074
No description provided.