Fix T93074: Gpencil cutter not using flat caps in middle cuts

When cut an stroke using the option Flat Caps, the falt was not done if the cut was done in the middle of the stroke.

Now the flat is applied to the segments created and also some cleanup of the code done.